--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <td>  <img src="images/Photo.jpg" alt="Sarvesh profile picture">
 </td>
 <td>
-  <h1>Sarvesh</h1>
+  <h1>Sarvesh Patil</h1>
    <p><em><strong>Engineering </strong>student at <a href="https://seaedu.ac.in">SEA College of Engineering and Technology</a></em></p>
    <p>I am a web developer</p>
 </td>
