--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>♥Sarvesh's Personal site</title>
+  <title>Sarvesh's Personal site</title>
 </head>
 
 <body>
